// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveHeaderComponent should be default 1`] = `
<vitaba-responsive-header-sample-implementation
  data={[Function Object]}
  styles={[Function Object]}
>
  <vitaba-responsive-header
    ng-reflect-data="[object Object]"
    ng-reflect-styles="[object Object]"
  >
    <div
      class="flex bg-white-400 border-b border-gray-300"
    >
      <div
        class="flex items-center justify-center w-1/6 p-2"
      >
        <span
          class="font-sans text-xl tracking-tight text-black-400 select-none"
        >
          Murano Admin
        </span>
      </div>
      <div
        class="flex w-5/6 p-2"
      >
        <div
          class="w-11/12"
        >
          <form
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
            novalidate=""
          >
            <vitaba-input-control
              ng-reflect-config="[object Object]"
              ng-reflect-styles="[object Object]"
            >
              
              
              <div
                class="flex"
              >
                <div
                  class="relative"
                >
                  
                  <div
                    class="pointer-events-none absolute inset-y-0 left-0 pl-4 flex items-center"
                  >
                    <svg
                      class="fill-current pointer-events-none text-gray-600 w-4 h-4"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"
                      />
                    </svg>
                  </div>
                </div>
                <input
                  class="transition focus:outline-0 border border-transparent focus:bg-white focus:border-gray-300 placeholder-gray-600 rounded-lg bg-gray-200 py-2 pr-4 pl-10 block w-full appearance-none leading-normal ds-input outline-none ng-untouched ng-pristine ng-valid"
                  ng-reflect-form="[object Object]"
                  placeholder="Search the items \\"(Press / to focus)\\""
                  type="text"
                />
              </div>
              
            </vitaba-input-control>
          </form>
        </div>
        <div
          class="w-1/12 flex items-center justify-center"
        >
          <button
            class="flex items-center px-3 py-3 border rounded text-gray-500 outline-none focus:outline-none"
          >
            
            
            <svg
              class="fill-current h-3 w-3"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Menu
              </title>
              <path
                d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </vitaba-responsive-header>
</vitaba-responsive-header-sample-implementation>
`;

exports[`ResponsiveHeaderComponent should throw errors when data is not in right format 1`] = `
<vitaba-responsive-header-sample-implementation
  data={[Function Object]}
  styles={[Function Object]}
>
  <vitaba-responsive-header
    ng-reflect-data="[object Object]"
    ng-reflect-styles="[object Object]"
  >
    <div
      class="flex bg-white-400 border-b border-gray-300"
    >
      <div
        class="flex items-center justify-center w-1/6 p-2"
      >
        <span
          class="font-sans text-xl tracking-tight text-black-400 select-none"
        >
          1
        </span>
      </div>
      <div
        class="flex w-5/6 p-2"
      >
        <div
          class="w-11/12"
        >
          <form
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
            novalidate=""
          >
            <vitaba-input-control
              ng-reflect-config="[object Object]"
              ng-reflect-styles="[object Object]"
            >
              
               
              
            </vitaba-input-control>
          </form>
        </div>
        <div
          class="w-1/12 flex items-center justify-center"
        >
          <button
            class="flex items-center px-3 py-3 border rounded text-gray-500 outline-none focus:outline-none"
          >
            
            
            <svg
              class="fill-current h-3 w-3"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Menu
              </title>
              <path
                d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </vitaba-responsive-header>
</vitaba-responsive-header-sample-implementation>
`;
